arrumei ó código javascript

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
                 <span>Ou Conecte Com Uma Rede Social</span>
                 <div class="social-fields">
                     <div class="social-fields twitter">
-                        <a href="#">
+                        <a href="https://twitter.com/i/flow/login">
                             <!-- <i class="fab fa-twitter-square"></i> -->
                             <span class="image-container">
                                 <img src="https://static.vecteezy.com/system/resources/previews/018/930/745/original/twitter-logo-twitter-icon-transparent-free-free-png.png" class="logos" >
-                              </span>
+                                </span>
                             Conecte com o Twitter
                         </a>
                     </div>
                     <div class="social-fields facebook">
-                        <a href="#">
+                        <a href="https://pt-br.facebook.com/login.php">
                             <!-- <i class="fab fa-facebook"></i> -->
 
                             <span class="image-container">
                                 <img src="https://static.vecteezy.com/system/resources/previews/018/930/698/original/facebook-logo-facebook-icon-transparent-free-png.png" class="logos" >
-                              </span>
+                                </span>
                             Conecte com o Facebook
                         </a>
                     </div>
